# djescher

./: .gitlab-ci.yml  CMakeLists.txt
data/: aaa.flac  djescher.desktop  net.dosowisko.DJEscher.appdata.xml
data/icons/: djescher.icns  icon.rc
flatpak/: net.dosowisko.DJEscher.json
src/: main.c
src/gamestates/: game.c
